--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ src="https://www.facebook.com/tr?id=770605022750751&ev=PageView&noscript=1"
     <div class="overlay"></div>
 
     <main class="card">
-        <img src="https://github.com/bestanalystt/Yashgowda22/blob/main/YASH100X.jpg?raw=true">
+        
+        <img src="assets/dp.jpg" class="avatar" alt="GAME CHANGER">
 
         <h1>YASH GOWDA™ (2017)</h1>
         <p class="subtitle">Cricket & Tennis Free Tips • Trusted on Telegram</p>
