--- a/index.html
+++ b/index.html
@@ -1,66 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <!-- Meta Pixel Code -->
-    <script>
-        ! function(f, b, e, v, n, t, s) {
-            if (f.fbq) return;
-            n = f.fbq = function() {
-                n.callMethod ?
-                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-            };
-            if (!f._fbq) f._fbq = n;
-            n.push = n;
-            n.loaded = !0;
-            n.version = '2.0';
-            n.queue = [];
-            t = b.createElement(e);
-            t.async = !0;
-            t.src = v;
-            s = b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t, s)
-        }(window, document, 'script',
-            'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '770605022750751');
-        fbq('track', 'PageView');
-    </script>
-    <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=770605022750751&ev=PageView&noscript=1"
-/></noscript>
-    <!-- End Meta Pixel Code -->
-    <title>YASH GOWDA)</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<title>YASH GOWDA</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s){
+if(f.fbq)return;n=f.fbq=function(){
+n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)
+}(window,document,'script','https://connect.facebook.net/en_US/fbevents.js');
+fbq('init','770605022750751');
+fbq('track','PageView');
+</script>
+<noscript>
+<img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=770605022750751&ev=PageView&noscript=1"/>
+</noscript>
+<!-- End Meta Pixel Code -->
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
+<style>
+*{
+margin:0;
+padding:0;
+box-sizing:border-box;
+font-family:'Poppins',sans-serif;
+}
+
+html,body{
+width:100%;
+height:100%;
+overflow:hidden;
+}
+
+/* Background Image */
+.bg-image{
+position:fixed;
+top:0;
+left:0;
+width:100%;
+height:100%;
+background:url('https://github.com/bestanalystt/Yashgowda22/blob/main/YASH100X.jpg?raw=true') center/cover no-repeat;
+filter:brightness(0.4);
+z-index:-2;
+}
+
+.overlay{
+position:fixed;
+top:0;
+left:0;
+width:100%;
+height:100%;
+background:rgba(0,0,0,0.55);
+z-index:-1;
+}
+
+.card{
+height:100vh;
+display:flex;
+flex-direction:column;
+align-items:center;
+justify-content:center;
+text-align:center;
+color:#fff;
+padding:20px;
+}
+
+/* ✅ IMAGE SIZE FIXED HERE */
+.avatar{
+width:120px;
+height:120px;
+border-radius:50%;
+object-fit:cover;
+border:4px solid #00ffe1;
+box-shadow:0 0 30px #00ffe1;
+margin-bottom:15px;
+}
+
+@media(min-width:768px){
+.avatar{
+width:150px;
+height:150px;
+}
+}
+
+h1{
+font-size:28px;
+font-weight:700;
+margin-bottom:6px;
+}
+
+.subtitle{
+font-size:14px;
+opacity:0.9;
+margin-bottom:20px;
+}
+
+.timer{
+font-size:42px;
+font-weight:700;
+color:#00ffe1;
+margin-bottom:5px;
+}
+
+.seconds-left{
+font-size:13px;
+opacity:0.8;
+margin-bottom:20px;
+}
+
+.cta{
+display:inline-block;
+padding:14px 28px;
+background:#00ffe1;
+color:#000;
+text-decoration:none;
+font-weight:700;
+border-radius:30px;
+box-shadow:0 0 25px #00ffe1;
+transition:0.3s;
+}
+
+.cta:hover{
+transform:scale(1.05);
+box-shadow:0 0 40px #00ffe1;
+}
+</style>
 </head>
 
 <body>
 
-    <!-- Video Background -->
-    <video autoplay muted loop playsinline class="bg-video">
-    <source src="assets/bg.mp4" type="video/mp4">
-  </video>
+<div class="bg-image"></div>
+<div class="overlay"></div>
 
-    <div class="overlay"></div>
+<div class="card">
 
-    <main class="card">
-        
-        <img src="assets/dp.jpg" class="avatar" alt="GAME CHANGER">
+<img src="https://github.com/bestanalystt/Yashgowda22/blob/main/YASH100X.jpg?raw=true"
+class="avatar"
+alt="YASH GOWDA">
 
-        <h1>YASH GOWDA™ (2017)</h1>
-        <p class="subtitle">Cricket & Tennis Free Tips • Trusted on Telegram</p>
+<h1>YASH GOWDA™ (2017)</h1>
+<p class="subtitle">Cricket & Tennis Free Tips • Trusted on Telegram</p>
 
-        <div id="timer" class="timer">0:59</div>
-        <p class="seconds-left">Auto redirect to Telegram</p>
+<div id="timer" class="timer">0:59</div>
+<p class="seconds-left">Auto redirect to Telegram</p>
 
-        <a href="https://t.me/+U-jCLwP7n-FmMjU1" class="cta">
-      JOIN TELEGRAM CHANNEL
-    </a>
-    </main>
+<a href="https://t.me/+U-jCLwP7n-FmMjU1" class="cta">
+JOIN TELEGRAM CHANNEL
+</a>
 
-    <script src="script.js"></script>
+</div>
+
+<script>
+let time = 59;
+const timerEl = document.getElementById("timer");
+
+const countdown = setInterval(()=>{
+let s = time < 10 ? "0"+time : time;
+timerEl.innerText = "0:" + s;
+time--;
+
+if(time < 0){
+clearInterval(countdown);
+window.location.href = "https://t.me/+U-jCLwP7n-FmMjU1";
+}
+},1000);
+</script>
+
 </body>
-
 </html>
