--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ s.parentNode.insertBefore(t,s)
 fbq('init','1977805139818585');
 fbq('track','PageView');
 </script>
+<!-- End Meta Pixel -->
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
@@ -39,10 +40,7 @@ background:#000;
 /* 🔥 FULL PAGE NEON FRAME */
 .neon-frame{
 position:fixed;
-top:0;
-left:0;
-width:100%;
-height:100%;
+inset:0;
 pointer-events:none;
 border:4px solid transparent;
 border-radius:12px;
@@ -51,8 +49,8 @@ linear-gradient(#000,#000) padding-box,
 linear-gradient(90deg,#00ffe1,#ff00ff,#00ff99,#00ffe1) border-box;
 animation:frameGlow 4s linear infinite;
 box-shadow:
-0 0 20px #00ffe1,
-inset 0 0 20px rgba(0,255,225,0.6);
+0 0 25px #00ffe1,
+inset 0 0 25px rgba(0,255,225,0.6);
 z-index:9999;
 }
 
@@ -133,8 +131,8 @@ font-weight:700;
 letter-spacing:2px;
 color:#00ffe1;
 box-shadow:
-0 0 10px #00ffe1,
-inset 0 0 10px #00ffe1;
+0 0 12px #00ffe1,
+inset 0 0 12px #00ffe1;
 animation:teluguGlow 2s infinite alternate;
 }
 
@@ -142,28 +140,28 @@ animation:teluguGlow 2s infinite alternate;
 0%{
 color:#00ffe1;
 border-color:#00ffe1;
-box-shadow:0 0 10px #00ffe1,inset 0 0 10px #00ffe1;
+box-shadow:0 0 12px #00ffe1,inset 0 0 12px #00ffe1;
 }
 100%{
 color:#ff00ff;
 border-color:#ff00ff;
-box-shadow:0 0 20px #ff00ff,inset 0 0 14px #ff00ff;
+box-shadow:0 0 22px #ff00ff,inset 0 0 16px #ff00ff;
 }
 }
 
 .subtitle{
 font-size:14px;
 opacity:0.9;
-margin:15px 0 20px;
+margin:15px 0 18px;
 }
 
 .timer{
-font-size:38px;
+font-size:36px;
 font-weight:700;
 color:#ff3cff;
 }
 
-/* 🔥 Animated CTA */
+/* 🔥 Animated CTA Button */
 .cta{
 margin-top:20px;
 padding:14px 32px;
@@ -192,14 +190,13 @@ animation:zoomPulse 1.5s infinite, neonGlow 3s infinite;
 <body>
 
 <div class="neon-frame"></div>
-
 <div class="bg-image"></div>
 <div class="overlay"></div>
 
 <div class="card">
 
 <div class="avatar-wrap">
-<img src="https://github.com/bestanalystt/Yashgowda22/blob/main/YASH100X.jpg?raw=true" class="avatar">
+<img src="https://github.com/bestanalystt/Yashgowda22/blob/main/YASH100X.jpg?raw=true" class="avatar" alt="YASH GOWDA">
 </div>
 
 <h1>YASH GOWDA™ (2017)</h1>
@@ -207,7 +204,7 @@ animation:zoomPulse 1.5s infinite, neonGlow 3s infinite;
 
 <p class="subtitle">Cricket & Tennis Free Tips • Trusted on Telegram</p>
 
-<div class="timer">Redirecting...</div>
+<div class="timer">Redirecting in 4 seconds…</div>
 
 <a href="https://t.me/+U-jCLwP7n-FmMjU1" class="cta">
 JOIN TELEGRAM CHANNEL
@@ -216,10 +213,10 @@ JOIN TELEGRAM CHANNEL
 </div>
 
 <script>
-/* ⏱️ Auto Redirect in 2 Seconds */
+/* ⏱️ Auto Redirect in 4 Seconds */
 setTimeout(()=>{
-window.location.href="https://t.me/+U-jCLwP7n-FmMjU1";
-},2000);
+  window.location.href = "https://t.me/+U-jCLwP7n-FmMjU1";
+},4000);
 </script>
 
 </body>
