--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>YASH GOWDA</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Meta Pixel Code -->
+<!-- Meta Pixel -->
 <script>
 !function(f,b,e,v,n,t,s){
 if(f.fbq)return;n=f.fbq=function(){
@@ -18,7 +18,6 @@ s.parentNode.insertBefore(t,s)
 fbq('init','1977805139818585');
 fbq('track','PageView');
 </script>
-<!-- End Meta Pixel -->
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
@@ -26,28 +25,42 @@ fbq('track','PageView');
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
 html,body{width:100%;height:100%;overflow:hidden;background:#000}
 
-/* 🔥 FULL PAGE NEON FRAME */
+/* 🌈 NEON FRAME (SAFE) */
 .neon-frame{
-position:fixed;inset:0;pointer-events:none;
-border:4px solid transparent;border-radius:12px;
-background:
-linear-gradient(#000,#000) padding-box,
-linear-gradient(90deg,#00ffe1,#ff00ff,#00ff99,#00ffe1) border-box;
-animation:hue 4s linear infinite;
-box-shadow:0 0 25px #00ffe1;
-z-index:9999;
+position:fixed;
+inset:8px;
+border:3px solid #00ffe1;
+border-radius:14px;
+pointer-events:none;
+animation:frameGlow 3s linear infinite;
+z-index:10;
 }
-@keyframes hue{to{filter:hue-rotate(360deg)}}
+@keyframes frameGlow{
+0%{box-shadow:0 0 10px #00ffe1;}
+50%{box-shadow:0 0 25px #ff00ff;}
+100%{box-shadow:0 0 10px #00ff99;}
+}
 
 /* Background */
 .bg-image{
-position:fixed;inset:0;
+position:fixed;
+inset:0;
 background:url('https://github.com/bestanalystt/Yashgowda22/blob/main/YASH100X.jpg?raw=true') center/cover no-repeat;
-filter:brightness(0.35);z-index:-2;
+filter:brightness(0.65);
+z-index:1;
 }
-.overlay{position:fixed;inset:0;background:rgba(0,0,0,.55);z-index:-1;}
+
+/* Soft overlay */
+.overlay{
+position:fixed;
+inset:0;
+background:rgba(0,0,0,0.35);
+z-index:2;
+}
 
 .card{
+position:relative;
+z-index:5;
 height:100vh;
 display:flex;
 flex-direction:column;
@@ -57,84 +70,80 @@ text-align:center;
 color:#fff;
 }
 
-/* 🪞 Avatar + Mirror */
-.avatar-wrap{position:relative}
+/* Avatar */
+.avatar-wrap{position:relative;}
 .avatar{
-width:160px;height:160px;
+width:150px;
+height:150px;
 border-radius:50%;
-border:4px solid #00ffe1;
-box-shadow:0 0 30px #00ffe1;
+border:3px solid #00ffe1;
+box-shadow:0 0 25px #00ffe1;
 object-fit:cover;
 }
+
+/* Mirror */
 .avatar-wrap::after{
 content:"";
 position:absolute;
-top:170px;
-width:160px;height:160px;
+top:160px;
+width:150px;
+height:150px;
 background:url('https://github.com/bestanalystt/Yashgowda22/blob/main/YASH100X.jpg?raw=true') center/cover no-repeat;
 transform:scaleY(-1);
-opacity:.35;
+opacity:0.3;
 filter:blur(2px);
-mask-image:linear-gradient(to bottom,rgba(0,0,0,.6),transparent);
+mask-image:linear-gradient(to bottom,rgba(0,0,0,.5),transparent);
 }
 
-h1{margin-top:15px;font-size:28px;font-weight:700}
+h1{margin-top:15px;font-size:26px;font-weight:700}
 
-/* 🔲 Telugu Neon Box */
+/* Telugu Neon Box */
 .telugu-box{
 margin-top:8px;
-padding:8px 26px;
+padding:8px 24px;
 border:2px solid #00ffe1;
 border-radius:6px;
-font-size:20px;
+font-size:19px;
 font-weight:700;
 color:#00ffe1;
-box-shadow:0 0 12px #00ffe1,inset 0 0 12px #00ffe1;
+box-shadow:0 0 10px #00ffe1,inset 0 0 10px #00ffe1;
 animation:glow 2s alternate infinite;
 }
 @keyframes glow{
 to{
 color:#ff00ff;
 border-color:#ff00ff;
-box-shadow:0 0 22px #ff00ff,inset 0 0 16px #ff00ff;
+box-shadow:0 0 18px #ff00ff,inset 0 0 14px #ff00ff;
 }
 }
 
-.subtitle{
-margin:15px 0;
-font-size:14px;
-opacity:.9;
-}
+.subtitle{margin:14px 0;font-size:14px;opacity:.9;}
 
-.timer{
-font-size:38px;
-font-weight:700;
-color:#ff3cff;
-}
+.timer{font-size:32px;font-weight:700;color:#ff3cff;}
 
 /* CTA */
 .cta{
-margin-top:20px;
-padding:14px 32px;
-border-radius:40px;
+margin-top:18px;
+padding:13px 30px;
+border-radius:35px;
 font-weight:700;
 text-decoration:none;
 color:#000;
 background:#00ffe1;
-box-shadow:0 0 25px #00ffe1;
+box-shadow:0 0 20px #00ffe1;
 animation:pulse 1.5s infinite;
 }
 @keyframes pulse{
-50%{transform:scale(1.12)}
+50%{transform:scale(1.1)}
 }
 </style>
 </head>
 
 <body>
 
-<div class="neon-frame"></div>
 <div class="bg-image"></div>
 <div class="overlay"></div>
+<div class="neon-frame"></div>
 
 <div class="card">
   <div class="avatar-wrap">
@@ -148,38 +157,29 @@ animation:pulse 1.5s infinite;
 
   <div id="timer" class="timer">Please wait…</div>
 
-  <a class="cta" href="https://t.me/+U-jCLwP7n-FmMjU1">
-    JOIN TELEGRAM CHANNEL
-  </a>
+  <a class="cta" href="https://t.me/+U-jCLwP7n-FmMjU1">JOIN TELEGRAM CHANNEL</a>
 </div>
 
 <script>
 document.addEventListener("DOMContentLoaded", () => {
 
-  // Force browser to paint UI first
-  requestAnimationFrame(() => {
-    requestAnimationFrame(() => {
+  // Minimum 3 sec page visible
+  setTimeout(() => {
 
-      // 🔒 Minimum 3 seconds page visible
-      setTimeout(() => {
+    let time = 4;
+    const timer = document.getElementById("timer");
 
-        let time = 4;
-        const timer = document.getElementById("timer");
+    const interval = setInterval(() => {
+      timer.innerText = "Redirecting in " + time;
+      time--;
 
-        const interval = setInterval(() => {
-          timer.innerText = "Redirecting in " + time;
-          time--;
+      if (time < 0) {
+        clearInterval(interval);
+        window.location.href = "https://t.me/+U-jCLwP7n-FmMjU1";
+      }
+    }, 1000);
 
-          if (time < 0) {
-            clearInterval(interval);
-            window.location.href = "https://t.me/+U-jCLwP7n-FmMjU1";
-          }
-        }, 1000);
-
-      }, 3000);
-
-    });
-  });
+  }, 3000);
 
 });
 </script>
